Fix js to display dark mode color

--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ ul {
 }
 
 li {
-    margin: 100px;   
+    margin: 170px;   
     font-family: 'Do Hyeon', sans-serif;
     font-size: 1.6em;
 }
